welcome.lessons.welcome.methods.returning.MethodsReturning.scala.error
Program:5: error: not found: value vuBiscuit
			vuBiscuit=true;
                        ^Program:2: error: type mismatch;
 found   : Unit
 required: Boolean
	for (nbPas <- 1 to 6) {
                   ^